[package]
name = "quartz_nbt"
version = "0.2.0"
authors = ["Cassy343", "maddymakesgames"]
edition = "2018"

description = "Provides support for serializing and deserializing Minecraft NBT data in binary and string form."
repository = "https://github.com/Rusty-Quartz/quartz_nbt"
license = "MIT"
readme = "README.md"

keywords = ["nbt", "minecraft", "data", "encode"]
categories = ["encoding", "parser-implementations"]

[dependencies]
quartz_nbt_macros = { version = "0.1.0", path = "./macros" }
anyhow = "1.0"
byteorder = "1.4"
cesu8 = "1.1"
flate2 = "1.0"
serde = { version = "1.0", optional = true }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
hematite-nbt = "0.5.2"
once_cell = "1.8"
serde = { version = "1.0", features = ["derive"] }

[[bench]]
name = "hematite"
harness = false
