[package]
name = "quartz_nbt"
version = "0.2.9"
authors = ["Cassy343", "maddymakesgames"]
edition = "2021"

description = "Provides support for serializing and deserializing Minecraft NBT data in binary and string form."
repository = "https://github.com/Rusty-Quartz/quartz_nbt"
license = "MIT"
readme = "README.md"

keywords = ["nbt", "minecraft", "data", "encode"]
categories = ["encoding", "parser-implementations"]

[dependencies]
quartz_nbt_macros = { version = "0.1.1", path = "./macros" }
anyhow = "1.0"
byteorder = "1.5"
cesu8 = "1.1"
flate2 = "1.0"
indexmap = { version = "2.2", optional = true, features = ["serde"] }
serde = { version = "1.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
fastnbt = "2.4"
flate2 = "1.0"
hematite-nbt = "0.5.2"
once_cell = "1.17"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }

[[bench]]
name = "all"
harness = false

[package.metadata.docs.rs]
features = ["serde"]

[features]
preserve_order = ["indexmap"]
