[package]
name = "quartz_nbt_macros"
version = "0.1.0"
edition = "2018"

description = "This crate contains the function-like procedural macro which parses quartz_nbt's compact compound format."
repository = "https://github.com/Rusty-Quartz/quartz_nbt"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"

[package.metadata.docs.rs]
all-features = true
